--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "homework 4",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lite": "lite-server",
+    "tsc:w": "tsc -w",
+    "start": "concurrently \"npm run lite\" \"npm run tsc:w\" "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "concurrently": "^3.1.0",
     "lite-server": "^2.2.2"
+  },
+  "dependencies": {
+    "@types/jquery": "^2.0.39"
   }
 }
